# Otus_11

./: CMakeLists.txt  test.txt
.github/workflows/: cmake.yml
include/: MapReduce.h
src/: main.cpp
